--- a/Contatos/index.html
+++ b/Contatos/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Contatos</title>
-        <link rel="stylesheet" href="css/cadastro.css">
-        <meta charset="utf-8" />
-    </head>
-    <body>
+
+<head>
+    <title>Contatos</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/cadastro.css">
+    <meta charset="utf-8" />
+</head>
+
+<body>
+    <div class="container">
         <form name="meu_form" class="form" onsubmit="contatosControles.adiciona(event)">
             <h1>Entre em contato</h1>
-    
-            <p class="nome">
-                <input type="text" id="nomeid" placeholder="Nome" required="required" name="nome" />
+
+            <div class="form-group nome">
                 <label for="nome">Nome</label>
-            </p>
+                <input type="text" class="form-control" id="nomeid" placeholder="Nome" required name="nome" />
+            </div>
+
+
             <p class="fone">
-                <input type="text" id="foneid" placeholder="Numero" name="fone" />
+                <input type="number" id="foneid" placeholder="Numero" name="fone" />
                 <label for="fone">Fone</label>
-    
+
             </p>
             <p>
                 <input type="email" id="emailid" placeholder="Email" name="email" />
@@ -25,13 +32,21 @@
             <p>
                 <textarea id="descid" placeholder="Deixe sua opnião"></textarea>
             </p>
-            <button class="btn btn -primary" type="submit">Adiciona</button>
+            <button class="btn btn-primary" type="submit">Adiciona</button>
         </form>
-    </body>
-    <script src="js/models/Contatos.js"></script>
-    <script src="js/controllers/ContatosControles.js"></script>
-    <script src="js/models/ListaContatos.js"></script>
-    <script>
-        let contatosControles = new ContatosControles();
-    </script>
+    </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+<script src="js/models/Contatos.js"></script>
+<script src="js/controllers/ContatosControles.js"></script>
+<script src="js/models/ListaContatos.js"></script>
+<script>
+    let contatosControles = new ContatosControles();
+</script>
+
 </html>
