--- a/Contatos/index.html
+++ b/Contatos/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/cadastro.css">
+    <script type ="text/javascript"></script>
     <meta charset="utf-8" />
 </head>
 
@@ -26,7 +27,7 @@
 
             </p>
             <p>
-                <input type="email" id="emailid" placeholder="Email" name="email" />
+                <input type="text" id="emailid" placeholder="Email" name="email" />
                 <label for="email">Email</label>
             </p>
             <p>
@@ -35,6 +36,7 @@
             <button class="btn btn-primary" type="submit">Adiciona</button>
         </form>
     </div>
+    <div id="contatosView"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -45,6 +47,7 @@
 <script src="js/models/Contatos.js"></script>
 <script src="js/controllers/ContatosControles.js"></script>
 <script src="js/models/ListaContatos.js"></script>
+<script src="js/views/ContatosView.js"></script>
 <script>
     let contatosControles = new ContatosControles();
 </script>
