Ainda nao conseguir excluir e editar os contatos

--- a/Contatos/index.html
+++ b/Contatos/index.html
@@ -48,6 +48,7 @@
 <script src="js/controllers/ContatosControles.js"></script>
 <script src="js/models/ListaContatos.js"></script>
 <script src="js/views/ContatosView.js"></script>
+<script src="js/excluir/ExcluirContato.js"></script>
 <script>
     let contatosControles = new ContatosControles();
 </script>
