--- a/Contatos/index.html
+++ b/Contatos/index.html
@@ -44,7 +44,7 @@
     crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
-<script src="js/models/Contatos.js"></script>
+<script src="js/models/Contato.js"></script>
 <script src="js/controllers/ContatosControles.js"></script>
 <script src="js/models/ListaContatos.js"></script>
 <script src="js/views/ContatosView.js"></script>
