uma pequena atualizasao

--- a/Contatos/index.html
+++ b/Contatos/index.html
@@ -13,22 +13,22 @@
 <body>
     <div class="container">
         <form name="meu_form" class="form" onsubmit="contatosControles.adiciona(event)">
-            <h1>Entre em contato</h1>
+            <h1>Adicione um contato</h1>
 
             <div class="form-group nome">
-                <label for="nome">Nome</label>
+                <label for="nome"></label>
                 <input type="text" class="form-control" id="nomeid" placeholder="Nome" required name="nome" />
             </div>
 
 
             <p class="fone">
                 <input type="number" id="foneid" placeholder="Numero" name="fone" />
-                <label for="fone">Fone</label>
+                <label for="fone"></label>
 
             </p>
             <p>
                 <input type="text" id="emailid" placeholder="Email" name="email" />
-                <label for="email">Email</label>
+                <label for="email"></label>
             </p>
             <p>
                 <textarea id="descid" placeholder="Deixe sua opnião"></textarea>
